# education

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: __init__.py
app/files/: create_table.sh  create_table.sql  data.csv  data.json  data.yaml  download.txt  employees.csv  log.config  task11.sql  Текстовый документ.txt  новый.txt
app/models/: __init__.py
app/routes/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py
